# easysub

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  RUST_MIGRATION.md  RUST_PROGRESS.md  go.mod  go.sum  main.go  rust-toolchain.toml
.github/: changelog-config.json
.github/workflows/: build_and_release.yml  ci.yml  docker_build.yml  release.yml  rust_rewrite_ci.yml
benches/: core.rs
config/: config.go  env.go  private_sub.go
crates/easysub-core/: Cargo.toml  README.md
crates/easysub-core/src/: config.rs  error.rs  external.rs  fetch.rs  group.rs  lib.rs  model.rs  mrs.rs  parser.rs  private.rs  rules.rs  structured.rs  subscription.rs  template.rs
crates/easysub-core/src/export/: clash.rs  mod.rs  singbox.rs
define/: conf_type.go  external_config.go  extra_settings.go  proxy.go  ruleset_content.go  ruleset_content_test.go  tribool.go
docs/: rust-operations.md
docs/docker_example/: Dockerfile
docs/docker_example/workdir/: private_sub.toml
export/clash/: clash.go  convert.go  optimize.go  transform.go  yaml_test.go
export/common/: converter.go  group.go
export/singbox/: ruleset_http_client_test.go  ruleset_limit_test.go  singbox.go
legacy/: README.md  go.sum  main.go
legacy/.github/workflows/: build_and_release.yml  docker_build.yml
legacy/config/: private_sub.go
legacy/define/: external_config.go  proxy_group.go  ruleset_content.go  ruleset_content_benchmark_test.go
legacy/docs/: RUST_MIGRATION.md  RUST_PROGRESS.md
legacy/docs/docker_example/: Dockerfile
legacy/export/clash/: proxy_optimization_test.go  ruleset_limit_test.go  yaml_test.go
legacy/export/common/: converter.go  converter_benchmark_test.go  converter_test.go  group.go  group_benchmark_test.go  group_test.go
legacy/export/singbox/: ruleset_http_client_test.go  singbox.go
legacy/modules/cache/: file.go
legacy/modules/fetch/: fetch.go  http_proxy.go  http_proxy_windows.go  webget_test.go
legacy/modules/parser/: anytls_test.go  define.go  load_external.go  node.go  subparser.go  subparser_test.go
legacy/modules/tpl/: template.go  template_test.go
legacy/modules/util/: converter.go  reg.go  strconv.go  util_test.go
legacy/routers/api/v1/: private.go  util.go  (+1 more)
legacy/scratch/: test_full.go
modules/fetch/: fetch.go  fileget.go  webget.go
modules/parser/: config_test.go  define.go  load_external.go  node.go  subparser.go  subparser_test.go
modules/render/: template.go  template_test.go
modules/util/: base64.go  collection.go  converter.go  map.go  reg.go  url.go  util_test.go
routers/: routers.go
routers/api/v1/: ruleset.go  sub.go  util.go
routers/middleware/limiter/: concurrency.go
scratch/: generated_test_clash.yml  generated_test_full.json  test_full.go
scripts/: measure-release.ps1
src/: api.rs  config.rs  error.rs  external.rs  fetch.rs  group.rs  lib.rs  main.rs  model.rs  mrs.rs  parser.rs  private.rs  rules.rs  structured.rs  subscription.rs  template.rs
src/export/: clash.rs  mod.rs  singbox.rs
tests/: go_golden.rs  ruleset_corpus.rs
tests/fixtures/go_golden/: generated_test_full.json
workdir/: pref.example.toml  private_sub.toml
workdir/base/: clash.liquid  singbox.liquid
workdir/file_share/: ACL4SSR_Online_NoAuto.ini  custom_direct.plist  custom_proxy.plist
(+6 files in other folders)
