[package]
name = "easysub-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.96"

[workspace]
members = ["crates/easysub-core"]
resolver = "3"

[dependencies]
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "query", "tokio"] }
bytes = "1"
easysub-core = { path = "crates/easysub-core" }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.7", features = ["catch-panic", "request-id", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[dev-dependencies]
serde_yaml = "0.9"
tower = { version = "0.5", features = ["util"] }
zstd = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[[bench]]
name = "core"
harness = false

[[bin]]
name = "easysub-rs"
path = "src/main.rs"
