[package]
name = "easysub-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.96"
description = "Reusable subscription conversion core for easysub"
repository = "https://github.com/821869798/easysub"
readme = "README.md"

[dependencies]
base64 = "0.22"
bytes = "1"
futures-util = "0.3"
ipnet = "2"
liquid = "0.26.11"
liquid-core = "0.26.11"
moka = { version = "0.12.15", features = ["future"] }
num-traits = "0.2"
percent-encoding = "2"
regex = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["charset", "http2", "rustls", "socks", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "1.1.3"
tracing = "0.1"
url = "2"
zstd = "0.13"

[dev-dependencies]
proptest = "1"
